oasis-macros/tests/ui/no_contract_impl.stderr
error: Missing implementation for `Counter::new`.
 --> $DIR/no_contract_impl.rs:5:16
  |
5 |     pub struct Counter(u32);
  |                ^^^^^^^

error: aborting due to previous error

